--- a/_includes/1-mountain.html
+++ b/_includes/1-mountain.html
@@ -20,10 +20,10 @@
 </div>
 <div class="verse">
   <div class="line">
-    And minor rise and part placed
+    And minor rise and part
   </div>
   <div class="line">
-    And aids to to the terrain
+    Part and aids to to the terrain
   </div>
   <div class="line">
     Is of an conjunction quantities
@@ -40,7 +40,7 @@
     And of from the west
   </div>
   <div class="line">
-    Nut as an arm in the so limits
+    But as an arm in the so limits
   </div>
   <div class="line">
     One are into routes to
