--- a/_includes/0-prologue.html
+++ b/_includes/0-prologue.html
@@ -1,5 +1,8 @@
 <h2>
   0. Prologue
+  <div class="source">
+    Emily Dickinson, "I cross till I am weary" (1862)
+  </div>
 </h2>
 <div class="verse">
   <div class="line">
