--- a/_includes/1-mountain.html
+++ b/_includes/1-mountain.html
@@ -1,5 +1,8 @@
 <h2>
   1. Mountain
+  <div class="source">
+    <i>Maps for America</i>, "Glossary of Cartography and Map Terminology" (1988)
+  </div>
 </h2>
 <div class="verse">
   <div class="line">
