--- a/_includes/3-rest.html
+++ b/_includes/3-rest.html
@@ -1,5 +1,8 @@
 <h2>
   3. Rest
+  <div class="source">
+    Stephen Hawking, <i>A Brief History of Time</i> (1988)
+  </div>
 </h2>
 <div class="verse">
   <div class="line">
