--- a/_includes/5-shout.html
+++ b/_includes/5-shout.html
@@ -1,5 +1,8 @@
 <h2>
   5. Shout
+  <div class="source">
+    <i>Concise Oxford English Dictionary</i>, "100 Most Common English Words" (2004)
+  </div>
 </h2>
 <div class="verse">
   <div class="line">
