--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
   <div class="wrapper">
     <i>Maps</i> is a series of digital transformations of Emily Dickinson's poem
     "I cross till I am weary" (c. 1862). Six variations on the poem were created
-    using Carnegie Mellon University's speech recognition software suite Sphinx
-    (<a href="http://cmusphinx.sourceforge.net/">http://cmusphinx.sourceforge.net</a>).
+    using Carnegie Mellon University's speech recognition software suite
+    <a href="http://cmusphinx.sourceforge.net/">Sphinx</a>.
     Sphinx's workflow includes the ability to define the corpus (or body of text)
     from which Sphinx will choose its vocabulary when rendering a speech recording into text.
     When given a verbally distinct corpus, Sphinx "maps" the sounds of the
