--- a/_includes/2-grains.html
+++ b/_includes/2-grains.html
@@ -1,5 +1,8 @@
 <h2>
   2. Grains
+  <div class="source">
+    Marion Harris Neil, <i>A Calendar of Dinners, with 615 recipes</i> (1922)
+  </div>
 </h2>
 <div class="verse">
   <div class="line">
