--- a/_includes/4-doubt.html
+++ b/_includes/4-doubt.html
@@ -1,5 +1,8 @@
 <h2>
   4. Doubt
+  <div class="source">
+    List of male inmates (from U.S. Public inmate records)
+  </div>
 </h2>
 <div class="verse">
   <div class="line">
