--- a/_includes/6-die.html
+++ b/_includes/6-die.html
@@ -1,5 +1,7 @@
 <h2>
   6. Die
+  <div class="source">
+    <i>Bulletin of Yale University</i>, "Obituary Record of Yale Graduates" (1928)
 </h2>
 <div class="verse">
   <div class="line">
