improve layout. no mix-blend-mode

--- a/_includes/0-prologue.html
+++ b/_includes/0-prologue.html
@@ -1,9 +1,9 @@
-<h2>
+<div class="heading">
   0. Prologue
   <div class="source">
     Emily Dickinson, "I cross till I am weary" (1862)
   </div>
-</h2>
+</div>
 <div class="verse">
   <div class="line">
     I cross till I am weary
