--- a/_includes/1-mountain.html
+++ b/_includes/1-mountain.html
@@ -1,9 +1,9 @@
-<h2>
+<div class="heading">
   1. Mountain
   <div class="source">
     <i>Maps for America</i>, "Glossary of Cartography and Map Terminology" (1988)
   </div>
-</h2>
+</div>
 <div class="verse">
   <div class="line">
     Are still an varies
