--- a/_includes/3-rest.html
+++ b/_includes/3-rest.html
@@ -1,9 +1,9 @@
-<h2>
+<div class="heading">
   3. Rest
   <div class="source">
     Stephen Hawking, <i>A Brief History of Time</i> (1988)
   </div>
-</h2>
+</div>
 <div class="verse">
   <div class="line">
     For us to lie unwary
