--- a/_includes/6-die.html
+++ b/_includes/6-die.html
@@ -1,8 +1,9 @@
-<h2>
+<div class="heading">
   6. Die
   <div class="source">
     <i>Bulletin of Yale University</i>, "Obituary Record of Yale Graduates" (1928)
-</h2>
+  </div>
+</div>
 <div class="verse">
   <div class="line">
     Charge to law m where he
