--- a/_includes/4-doubt.html
+++ b/_includes/4-doubt.html
@@ -1,9 +1,9 @@
-<h2>
+<div class="heading">
   4. Doubt
   <div class="source">
     List of male inmates (from U.S. Public inmate records)
   </div>
-</h2>
+</div>
 <div class="verse">
   <div class="line">
     Costello, M. Larry
