--- a/_includes/5-shout.html
+++ b/_includes/5-shout.html
@@ -1,9 +1,9 @@
-<h2>
+<div class="heading">
   5. Shout
   <div class="source">
     <i>Concise Oxford English Dictionary</i>, "100 Most Common English Words" (2004)
   </div>
-</h2>
+</div>
 <div class="verse">
   <div class="line">
     Our us will an we year its
