--- a/assets/main.scss
+++ b/assets/main.scss
@@ -5,6 +5,7 @@
 @import "minima";
 
 $blue: #1010f9;
+$yellow: #f9f910;
 
 html, body {
   overflow-x: hidden;
@@ -15,7 +16,8 @@ header {
   background: black;
   color: white;
   width: 100%;
-  z-index: 10;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .page-content {
@@ -24,13 +26,14 @@ header {
 
 .section-links {
   position: fixed;
-  top: 140px;
+  top: 65px;
   right: 30px;
 
   a {
     color: white;
     padding-left: 25px;
-    margin-bottom: 15px;
+    margin-bottom: -15px;
+    margin-top: 10px;
     display: block;
 
     &:before {
@@ -51,20 +54,13 @@ header {
 
 section {
   font-size: 15px;
-  padding-top: 75px;
+  padding-top: 40px;
 
-  h2 {
+  .heading {
     color: white;
     background: $blue;
-    mix-blend-mode: exclusion;
     text-align: center;
-    margin-left: -60px;
-    margin-right: -60px;
-    padding-left: 60px;
-    padding-right: 60px;
-    .source {
-      font-size: 80%;
-    }
+    margin-bottom: 1rem;
   }
   .verse {
     margin-bottom: 0.5rem;
@@ -75,15 +71,16 @@ section {
 
 .modal-trigger {
   position: fixed;
-  bottom: 10px;
+  top: 5px;
   right: 48px;
-  color: white;
   border-radius: 50%;
   background: $blue;
+  color: white;
   display: block;
   height: 25px;
   width: 25px;
   text-align: center;
+  z-index: 20;
 }
 
 .modal {
@@ -172,12 +169,12 @@ section {
 
 @media screen and (max-width: 768px) {
   section {
-    font-size: 12px;
+    font-size: 13px;
   }
 
   .modal__inner {
     width: 80%;
-    height: 60%;
+    height: 80%;
     box-sizing: border-box;
   }
 }
@@ -185,7 +182,8 @@ section {
 
 .site-footer {
   border-top: 30px solid $blue;
-  mix-blend-mode: hard-light;
   background: white;
-  z-index: 10;
+  color: black;
+  position: absolute;
+  width: 100%;
 }
