don't do css blending  (except in main2)

--- a/_includes/6-die.html
+++ b/_includes/6-die.html
@@ -6,7 +6,7 @@
 </div>
 <div class="verse">
   <div class="line">
-    Charge to law m where he
+    Charge to law am where he
   </div>
   <div class="line">
     The mountain in wire mine at
