--- a/_includes/1-mountain.html
+++ b/_includes/1-mountain.html
@@ -26,7 +26,7 @@
     And minor rise and part
   </div>
   <div class="line">
-    Part and aids to to the terrain
+    Placed and aids to to the terrain
   </div>
   <div class="line">
     Is of an conjunction quantities
