--- a/_includes/4-doubt.html
+++ b/_includes/4-doubt.html
@@ -54,7 +54,7 @@
     Roy A. Merritt; Patrick Alls
   </div>
   <div class="line">
-    X. Atteberry; Jurgen
+    X. Atteberry–Jurgen
   </div>
   <div class="line">
     Fain Dallas; N. Fordham–Penner
